--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"pages/**/*.{js,jsx,ts,tsx,json,css,scss,md}\" \"components/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
     "@types/react-bootstrap": "^0.32.36",
@@ -23,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "prettier": "^3.3.2",
     "typescript": "^5"
   }
 }
